Use java.util.Base64
* This fixes java9+
* Error: Exception in thread "main" java.lang.NoClassDefFoundError: sun/misc/BASE64Encoder