@@ -59,7 +59,7 @@ import javax.crypto.EncryptedPrivateKeyInfo;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 import sun.security.pkcs.ContentInfo;
 import sun.security.pkcs.PKCS7;
 import sun.security.pkcs.SignerInfo;
@@ -179,7 +179,7 @@ class SignApk {
             main.putValue("Manifest-Version", "1.0");
         }
 
-        BASE64Encoder base64 = new BASE64Encoder();
+        Base64.Encoder base64 = Base64.getEncoder().withoutPadding();
         MessageDigest md = MessageDigest.getInstance("SHA1");
         byte[] buffer = new byte[4096];
         int num;
@@ -210,7 +210,7 @@ class SignApk {
                 Attributes attr = null;
                 if (input != null) attr = input.getAttributes(name);
                 attr = attr != null ? new Attributes(attr) : new Attributes();
-                attr.putValue("SHA1-Digest", base64.encode(md.digest()));
+                attr.putValue("SHA1-Digest", base64.encodeToString(md.digest()));
                 output.getEntries().put(name, attr);
             }
         }
@@ -230,7 +230,7 @@ class SignApk {
                                    long timestamp,
                                    Manifest manifest)
         throws IOException, GeneralSecurityException {
-        BASE64Encoder base64 = new BASE64Encoder();
+        Base64.Encoder base64 = Base64.getEncoder().withoutPadding();
         MessageDigest md = MessageDigest.getInstance("SHA1");
 
         JarEntry je = new JarEntry(OTACERT_NAME);
@@ -246,7 +246,7 @@ class SignApk {
         input.close();
 
         Attributes attr = new Attributes();
-        attr.putValue("SHA1-Digest", base64.encode(md.digest()));
+        attr.putValue("SHA1-Digest", base64.encodeToString(md.digest()));
         manifest.getEntries().put(OTACERT_NAME, attr);
     }
 
@@ -296,7 +296,7 @@ class SignApk {
         Attributes main = sf.getMainAttributes();
         main.putValue("Signature-Version", "1.0");
 
-        BASE64Encoder base64 = new BASE64Encoder();
+        Base64.Encoder base64 = Base64.getEncoder().withoutPadding();
         MessageDigest md = MessageDigest.getInstance("SHA1");
         PrintStream print = new PrintStream(
                 new DigestOutputStream(new ByteArrayOutputStream(), md),
@@ -305,7 +305,7 @@ class SignApk {
         // Digest of the entire manifest
         manifest.write(print);
         print.flush();
-        main.putValue("SHA1-Digest-Manifest", base64.encode(md.digest()));
+        main.putValue("SHA1-Digest-Manifest", base64.encodeToString(md.digest()));
 
         Map<String, Attributes> entries = manifest.getEntries();
         for (Map.Entry<String, Attributes> entry : entries.entrySet()) {
@@ -318,7 +318,7 @@ class SignApk {
             print.flush();
 
             Attributes sfAttr = new Attributes();
-            sfAttr.putValue("SHA1-Digest", base64.encode(md.digest()));
+            sfAttr.putValue("SHA1-Digest", base64.encodeToString(md.digest()));
             sf.getEntries().put(entry.getKey(), sfAttr);
         }
 
